# CHANGELOG

## 2025 - 06 - 16: Add new logo assets in PNG and SVG formats and First commit

- Initial commit
- Added a PNG logo file with a detailed binary representation.
- Introduced a new SVG logo file featuring a circular design with a stroke and mask for visual effects.

## 2025 - 06 - 25: Add drizzle configuration and middleware for request handling

- Created drizzle.config.ts for database configuration with PostgreSQL.
- Implemented middleware.ts to manage request headers and URL handling.
- Updated next.config.ts to include environment variables.
- Modified package.json to add new scripts for database management and authentication generation.
- Added new dependencies including drizzle-orm, better-auth, and others.
- Introduced new assets for account creation and sign-in banners.

refactor: remove unused APP_URL from environment schema

fix: enhance signup uniqueness check by adding appId to query

fix: improve error handling and validation in signup process