@@ -5,7 +5,7 @@ import { and, eq } from "drizzle-orm";
 import { NextRequest, NextResponse } from "next/server";
 
 
-const addSignUp = async (apiKey: string, projectId: string , email: string) => {
+const addSignUp = async (apiKey: string, projectId: string, email: string) => {
 
     const app = await db.query.apps.findFirst({
         where: eq(apps.projectId, projectId)
@@ -19,12 +19,12 @@ const addSignUp = async (apiKey: string, projectId: string , email: string) => {
 
     if (!credential || !credential.apiKey) throw new Error("Cannot validate credentials")
 
-    const isCorrectAPIKey = await bcrypt.compare(apiKey , credential.apiKey)
+    const isCorrectAPIKey = await bcrypt.compare(apiKey, credential.apiKey)
 
-    if(!isCorrectAPIKey) throw new Error("Invalid API key")
+    if (!isCorrectAPIKey) throw new Error("Invalid API key")
 
     const alreadyExists = await db.query.signups.findFirst({
-        where: and(eq(signups.email, email) , eq(signups.appId , app.id))
+        where: and(eq(signups.email, email), eq(signups.appId, app.id))
     })
 
     if (alreadyExists) throw Error("This email is already in the waitlist")
@@ -40,7 +40,7 @@ export const POST = async (request: NextRequest) => {
 
         const apiKey = request.headers.get('Authorization')?.split(' ')[1]
 
-        const projectId = request.headers.get('X-Project-ID')
+        const projectId = request.headers.get('X-App-ID')
 
         if (!apiKey) throw new Error("Missing API Key in Authorization header")
 
@@ -50,7 +50,7 @@ export const POST = async (request: NextRequest) => {
 
         if (!email) throw new Error("Missing email in request body")
 
-        const signup = await addSignUp(apiKey , projectId , email)
+        const signup = await addSignUp(apiKey, projectId, email)
 
         return NextResponse.json({
             success: true,
